Dark-Mode/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');

:root {
  --main:rgb(219, 219, 219);
  --secondary:rgb(1, 100, 146);
  --accent: rgb(241, 241, 241);
  --body: rgb(71, 71, 71);
  --sky: rgb(107, 166, 255);
  --icon: rgb(251, 255, 0);
  --text:rgb(42, 29, 75);
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Open Sans', sans-serif;
  transition-property: background,color;
  transition: 250ms ease-in-out;
}

body {
  background-color: var(--main);
}

#setTheme {
  display: flex;
  align-items: center;
  margin-top: 2rem;
  margin-left: 2rem;
  gap: 0;
  color: var(--body);
  transition: 0s;
}

#setTheme p {
  transition: 50ms ease-in-out;
  font-weight: bold;
}

.modoDark {
  background-color: var(--sky);
  width: 4.5rem;
  height: 2.2rem;
  border-radius: 30px;
}

.icon {
  display: block;
  width: 1.5rem;
  height: 1.5rem;
  margin: 0 .2rem;
  background-color: var(--icon);
  border-radius: 50%;
}

h1 {
  text-align: center;
  margin: 1.5em 0;
  color: var(--secondary);
  font-size: 3rem;
}

ul {
  display: flex;
  list-style: none;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

li {
  padding: .5em 2em;
  margin-bottom: 1em;
  background-color: var(--accent);
  border-radius: 5px;
  color: var(--body);
  font-size: 1.1em;
}

